# module_auto_init

./: .gitignore  CMakeLists.txt  Makefile  README.md  link.ld  main.c
deiver/: iwdg_drv.c
interface/: iwdg_inface.c  iwdg_inface.h
module/: driver.c
src/: dev.c  dev.h  mod_init.c  mod_init.h
